--- a/src/sass/pages/_restaurants.scss
+++ b/src/sass/pages/_restaurants.scss
@@ -7,7 +7,6 @@
 
 .menus {
   width: 100%;
-  /*height: 10rem;*/
   border-radius: 3rem 3rem 0 0;
   background-color: $background-primary;
   position: absolute;
@@ -68,18 +67,37 @@
     overflow: hidden;
     white-space: nowrap;
   }
+}
 
-  &__card {
-    padding-top: 1.2rem;
+.enter__card {
+  padding-top: 1.2rem;
 
-    &__item {
-      background-color: white;
-      border-radius: 1rem;
-      padding: 0.7rem;
-      @include box-shadow-card;
-      display: flex;
-      margin-bottom: 1rem;
-      animation: dishes 1.5s;
+  &__item {
+    width: 100%;
+    background-color: white;
+    border-radius: 1rem;
+    padding: 0.7rem;
+    @include box-shadow-card;
+    display: flex;
+    margin-bottom: 1rem;
+    animation: dishes 1.5s;
+    /*cache le dépassement de la boîte*/
+    overflow: hidden;
+    position: relative;
+
+    /*&--2 {
+      animation-delay: 0.25s;
+    }
+
+    &--3 {
+      animation-delay: 0.5s;
+    }*/
+    &:hover .check {
+      right: 0px;
+      i {
+        transform: rotate(1turn);
+        transition-duration: 1s;
+      }
     }
   }
 }
