--- a/src/sass/components/_heart.scss
+++ b/src/sass/components/_heart.scss
@@ -5,7 +5,7 @@
   right: 2rem;
   bottom: 2.1rem;
   font-size: 1.6rem;
-  color: white;
+  color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-stroke: 2px black;
