--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -324,7 +324,7 @@ body {
   right: 2rem;
   bottom: 2.1rem;
   font-size: 1.6rem;
-  color: transparent;
+  color: white;
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-stroke: 2px black;
