responsive tablette + desktop ok

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -12,7 +12,6 @@
   }
 
   &__column {
-
     &__link {
       color: white;
       font-size: 1.1rem;
@@ -31,5 +30,12 @@
     font-size: 0.7rem;
     padding-right: 1rem;
   }
-}
 
+  @include tablet {
+    text-align: center;
+  }
+
+  @include desktop {
+    text-align: center;
+  }
+}
