--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -9,6 +9,7 @@
   box-shadow: rgb(0 0 0 / 30%) 0px 5px 8px;
   color: white;
 
+  /*modifier pour le boutonn rajout de padding plus grand*/
   &--large {
     padding: 1rem 3rem;
   }
