coeur fix background ok avec modifier

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -419,6 +419,10 @@ body {
   -webkit-background-clip: text;
 }
 
+.white--grey {
+  color: #f6f6f6;
+}
+
 .loader__section {
   width: 100vw;
   height: 100vh;
