--- a/src/sass/pages/_restaurants.scss
+++ b/src/sass/pages/_restaurants.scss
@@ -18,6 +18,14 @@
     font-family: "Shrikhand";
     font-size: 1.8rem;
     font-weight: 500;
+
+    @include tablet {
+      text-align: center;
+    }
+
+    @include desktop {
+      text-align: center;
+    }
   }
 }
 
@@ -40,6 +48,14 @@
     width: 3rem;
     height: 0.2rem;
     background-color: $colour-tertiary;
+
+    @include tablet {
+      width: 100%;
+    }
+
+    @include desktop {
+      width: 100%;
+    }
   }
 
   &__wrapper-p {
@@ -60,6 +76,18 @@
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+  }
+
+  @include tablet {
+    width: 35rem;
+    text-align: center;
+    margin: auto;
+  }
+
+  @include desktop {
+    width: 45rem;
+    text-align: center;
+    margin: auto;
   }
 }
 
