--- a/src/sass/base/_animations.scss
+++ b/src/sass/base/_animations.scss
@@ -6,7 +6,7 @@
   0% {
     transform: translateY(0);
   }
-  /*-0.5 elle descend*/
+  /*elle descend*/
   25% {
     transform: translateY(-1rem);
   }
@@ -31,6 +31,10 @@
 
   50% {
     opacity: 0.5;
+  }
+
+  75% {
+    opacity: 0.2;
   }
 
   100% {
