--- a/src/sass/layout/_functioning.scss
+++ b/src/sass/layout/_functioning.scss
@@ -35,6 +35,7 @@
 
     &:hover {
       background-color: rgb(245, 237, 255);
+      @include box-shadow-card-hover;
 
       .functioning__item__wrapper-icon {
         color: $colour-primary;
