--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -141,6 +141,7 @@ body {
 }
 .functioning__item:hover {
   background-color: #f5edff;
+  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 8px;
 }
 .functioning__item:hover .functioning__item__wrapper-icon {
   color: #9356DC;
@@ -305,7 +306,7 @@ body {
   outline: none;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 8px;
   color: white;
-  /*modifier pour le boutonn rajout de padding plus grand*/
+  /*modifier pour le bouton rajoute du padding*/
 }
 .btn--large {
   padding: 1rem 3rem;
@@ -331,51 +332,11 @@ body {
   height: 17.5rem;
   position: relative;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 8px;
-  /*.icone-heart {
-      position: absolute;
-      right: 2rem;
-      bottom: 2.1rem;
-      font-size: 1.6rem;
-      /*coeur de base couleur noir dans html fas au lieu de far --> transparent*/
-  /*color: transparent;
-      /*je rajoute les bords*/
-  /*-webkit-text-stroke: 2px black;
-
-      &:hover {
-        /*background sur tout le fond*/
-  /*background: linear-gradient(0deg, $colour-secondary, $colour-primary);
-        /*background seulement dans le coeur*/
-  /*propriété de base et en plus celle avec le préfixe*/
-  /*background-clip: text;
-        -webkit-background-clip: text;
-        /*j'enlève la bordure noir du coeur*/
-  /*-webkit-text-stroke: transparent;
-      }
-    }*/
-  /*.white {
-    z-index: 1;
-    background-color: white;
-    position: absolute;
-    right: 2rem;
-    bottom: 2.1rem;
-    font-size: 1.6rem;
-    color: black;
-
-    &:hover {
-      opacity: 0;
-      transition-duration: 1s;
-    }
-  }
-  .colored {
-    position: absolute;
-    right: 2rem;
-    bottom: 2.1rem;
-    font-size: 1.6rem;
-    color: transparent;
-    background: linear-gradient(0deg, $colour-secondary, $colour-primary);
-    background-clip: text;
-    -webkit-background-clip: text;
-  }*/
+}
+.card:hover {
+  transform: scale(1.02);
+  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 8px;
+  transition-duration: 0.5s;
 }
 
 .check {
