--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /* Utils */
-/*technique de Landon Schropp*/
+/*Responsive, technique de Landon Schropp*/
 /* Base */
 /* Reset */
 * {
