--- a/src/sass/pages/_restaurants.scss
+++ b/src/sass/pages/_restaurants.scss
@@ -14,7 +14,7 @@
   padding: 2rem 1.5rem;
 
   &__title {
-    font-style: oblique 10deg;
+    font-style: oblique;
     font-family: "Shrikhand";
     font-size: 1.8rem;
     font-weight: 500;
