--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -463,7 +463,7 @@ body {
   padding: 2rem 1.5rem;
 }
 .menus__title {
-  font-style: oblique 10deg;
+  font-style: oblique;
   font-family: "Shrikhand";
   font-size: 1.8rem;
   font-weight: 500;
