--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -493,6 +493,16 @@ body {
   padding-top: 2.5rem;
   padding-bottom: 0.5rem;
 }
+@media (min-width: 768px) and (max-width: 1023px) {
+  .enter h2 {
+    text-align: center;
+  }
+}
+@media (min-width: 1024px) {
+  .enter h2 {
+    text-align: center;
+  }
+}
 .enter__bar {
   width: 3rem;
   height: 0.2rem;
@@ -528,14 +538,12 @@ body {
 @media (min-width: 768px) and (max-width: 1023px) {
   .enter {
     width: 35rem;
-    text-align: center;
     margin: auto;
   }
 }
 @media (min-width: 1024px) {
   .enter {
     width: 45rem;
-    text-align: center;
     margin: auto;
   }
 }
